--- a/app/src/main/res/layout/activity_edit_item.xml
+++ b/app/src/main/res/layout/activity_edit_item.xml
@@ -22,6 +22,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="Save"
+        android:onClick="onSave"
         app:layout_constraintTop_toBottomOf="@+id/mlEditText"
         tools:layout_editor_absoluteX="16dp" />
 
