--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,33 +6,46 @@
     android:layout_height="match_parent"
     tools:context="com.example.bpeters.simpletodo.MainActivity">
 
-    <Button
-        android:id="@+id/btnAddItem"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Add"
-        android:onClick="onAddItem"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/lvitems"
-        app:layout_constraintLeft_toRightOf="@+id/btnAddItem"
-        android:layout_marginLeft="0dp" />
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
 
-    <ListView
-        android:id="@+id/lvitems"
-        android:layout_width="373dp"
-        android:layout_height="428dp"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="8dp" />
+            <ListView
+                android:id="@+id/lvitems"
+                android:layout_width="match_parent"
+                android:layout_height="448dp"
+                tools:layout_editor_absoluteX="8dp"
+                tools:layout_editor_absoluteY="8dp" />
 
-    <EditText
-        android:id="@+id/eteditText"
-        android:layout_width="261dp"
-        android:layout_height="42dp"
-        android:layout_marginRight="8dp"
-        android:ems="10"
-        android:hint="Add a new item"
-        android:inputType="textPersonName"
-        app:layout_constraintRight_toLeftOf="@+id/btnAddItem"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/lvitems" />
+                <RelativeLayout
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <EditText
+                        android:id="@+id/eteditText"
+                        android:layout_width="261dp"
+                        android:layout_height="42dp"
+                        android:ems="10"
+                        android:hint="Add a new item"
+                        android:inputType="textPersonName"
+                        app:layout_constraintRight_toLeftOf="@+id/btnAddItem"
+                        app:layout_constraintTop_toBottomOf="@+id/lvitems" />
+
+                    <Button
+                        android:id="@+id/btnAddItem"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentTop="true"
+                        android:layout_toEndOf="@+id/eteditText"
+                        android:layout_toRightOf="@+id/eteditText"
+                        android:onClick="onAddItem"
+                        android:text="Add"
+                        app:layout_constraintLeft_toRightOf="@+id/btnAddItem"
+                        app:layout_constraintTop_toBottomOf="@+id/lvitems" />
+
+                </RelativeLayout>
+        </LinearLayout>
+
 </android.support.constraint.ConstraintLayout>
